Made the following changes 	added four new files and modified two files     new file:   about.css     new file:   about.html 	new file:   contact.css 	new file:   contact.html 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -9,6 +9,26 @@
 </head>
 
 <body>
+    <nav class="profile-nav">
+        <ul>
+            <li>
+                <a href="index.html" class="active">
+                    Home
+                </a>
+            </li>
+            <li>
+                <a href="about.html">
+                    About
+                </a>
+            </li>
+            <li>
+                <a href="contact.html">
+                    Contact
+                </a>
+            </li>
+        </ul>
+    </nav>
+
     <article class="profile-card" data-testid="test-profile-card">
         <figure>
             <img class="profile-avatar" src="avatar.jpg" alt="a photo of Christopher. A wearing a whit tshirt"
@@ -36,7 +56,8 @@
                     </a>
                 </li>
                 <li data-testid="test-user-social-linkedin">
-                    <a href="https://www.linkedin.com/in/christopher-abedi-419558322/" target="_blank" rel="noopener noreferrer" aria-label="Linkedin">
+                    <a href="https://www.linkedin.com/in/christopher-abedi-419558322/" target="_blank"
+                        rel="noopener noreferrer" aria-label="Linkedin">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-linkedin" viewBox="0 0 16 16" aria-hidden="true">
                             <path
@@ -45,7 +66,8 @@
                     </a>
                 </li>
                 <li data-testid="test-user-social-facebook">
-                    <a href="https://web.facebook.com/christopher.abedi.31" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+                    <a href="https://web.facebook.com/christopher.abedi.31" target="_blank" rel="noopener noreferrer"
+                        aria-label="Facebook">
                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                             class="bi bi-facebook" viewBox="0 0 16 16" aria-hidden="true">
                             <path
